# MLGO

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.yaml  env.yml  index.yaml  makefile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run_test.yaml  static.yml
config/: config.yaml
data/: performance_log.tsv
data/raw/: batch-1-GSE.txt  batch-1.txt  batch-10.txt  batch-11.txt  batch-12.txt  batch-2-GSE.txt  batch-2.txt  batch-3-GSE.txt  batch-3.txt  batch-4.txt  batch-5.txt  batch-6.txt  batch-7.txt  batch-8.txt  batch-9.txt
docs/: _quarto.yml  custom.scss  index.qmd  paper.qmd  presentation.html  presentation.qmd  report.tex
docs/archive/winter-22/: revealjs.qmd
docs/includes/: abstract.tex  dataset.tex  discussion.tex  introduction.tex  methods.tex  references.bib  results.tex
mlgo/: __init__.py  utils.py
notebooks/: 01-data-pipeline.ipynb  Model-Development-DGEX.ipynb  Model-Development.ipynb  preliminaryanalysis.ipynb  project.ipynb
notebooks/archive/: 01-data-pipeline.ipynb
paper/: presentation.qmd
paper/includes/: abstract.tex  dataset.tex  discussion.tex  methods.tex  references.bib
results/: crossval.tsv  optimization.tsv
scripts/: cleandata.R  dataprep.R  dataprep.py  downloadgse.py  loaddatasets.R  loadmetadata.R  prepdata.py  process_batches.sh  setup.sh
scripts/archive/: download.R  enrichment.R  loaddatasets-sequential.R
src/mlgo/: ae.py  tools.py
